--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
       "name": "Chris Raidler",
       "email": "chris@raidler.ch"
     }
-  ]
+  ],
+  "autoload": {
+    "psr-4": {
+      "HB9HCR\\" : ""
+    }
+  }
 }
