--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "craidler/hb9hcr",
+  "name": "craidler/hb9hcr-library",
   "description": "HB9HCR Library",
   "minimum-stability": "dev",
   "license": "proprietary",
